#ifndef COMPANY_TRANSPORTMODE_H
#define COMPANY_TRANSPORTMODE_H

enum TransportMode {
    PASSENGER, CARGO
};

#endif
